# TCGWallet-API

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  card_matcher.py  card_matcher_guide.md  embed_cards.py  main.py  models.py  pyproject.toml  run.py  setup.sh  tcgplayer_api.py  test_api.py  test_card_matcher.py
app/api/: __init__.py  card.py  image.py  tcgplayer.py
app/core/: __init__.py  config.py
app/models/: __init__.py  card.py  tcgplayer.py
app/services/: __init__.py  card_matcher.py  pack_service.py  tcgplayer_api.py
app/tests/: test_api.py  test_card_matcher.py  test_product_matcher.py
app/utils/: __init__.py  embedding.py  errors.py  image.py  image_compare.py
data/cards_by_pack/: cards_569001.json  cards_569002.json  cards_569003.json  cards_569004.json  cards_569005.json  cards_569006.json  cards_569007.json  cards_569008.json  cards_569009.json  cards_569010.json  cards_569011.json  cards_569012.json  cards_569013.json  cards_569014.json  cards_569015.json  cards_569016.json  cards_569017.json  cards_569018.json  cards_569019.json  cards_569020.json  cards_569021.json  cards_569023.json  cards_569024.json  cards_569025.json  cards_569026.json  cards_569027.json  cards_569028.json  cards_569101.json  cards_569102.json  cards_569103.json  cards_569104.json  cards_569105.json  cards_569106.json  cards_569107.json  cards_569108.json  cards_569109.json  cards_569110.json  cards_569111.json  cards_569201.json  cards_569202.json  (+4 more)
docs/: api.md
mocks/tcg_api/: groups.json  (+2 more)
scripts/: fetch_tcgplayer_cards.py
